This file documents the revision history for Perl extension Gitalist.

0.003002 2011-05-23
  - Add JSON serialization and expose via .json (Tomas Doran).
  - Provide .psgi for Plack goodness (Francoise Dehinbo).

0.003001 2011-03-13
  - Reinstate FromDirectory in model.
  - Drop unneeded deps in Makefile.PL.
  - Add support for multiple repos with the same name (Jose Luis Martinez).
  - Make paging work for history (Lian Wan Situ),
  - Respect paging.log config settings.

0.002009 2011-03-06
  - Document the available configuration options.
  - Provide switch in config for forcing recursive repo searching.
  - Assume UTF8 encoded blobs.

0.002008 2011-02-26
  - Add the ability to provide a whitelist of repos.
  - Add support for export-ok config option.
  - Ignore ancient/malformed tags.
  - Use the correct perl binary we installed against (Tom Hukins)

0.002007 2011-02-19
  - Add support for recursively searching for git repos (Dipesh Patel)
  - Cleaned up model code in Gitalist::Git:: (Zachary Stevens)
  - Improve POD mark-up, some typos (Lars Dɪᴇᴄᴋᴏᴡ 迪拉斯)
  - Regenerated README and fixed tests for bootstrapped checkouts.
  - Add Test::Exception dep.

0.002006 2010-10-17
  - Added notes regarding slash encoding in Catalyst
  - Fixed typo in core.css
  - Updated formatting in Gitalist.pm
  - Modified README with more details on FCGI deployment with Apache
  - Fix broken env includes in script/gitalist*.pl.

0.002005 2010-08-13
  - Limit the number of branches/tags listed by default.

0.002004 2010-08-02
  - Fix misnamed variable which was giving a syntax error in
    Gitalist::Controller::Fragment::Ref.
  - Fix blame view to display syntax highlighted blobs correctly
    instead of outputting raw HTML.

0.002003 2010-08-02
  - Fix for distribution not including script/env causing Makefile.PL
    and scripts to die.

0.002002 2010-08-01
  - Fix dist packaging issues.

0.002001 2010-07-03
  - Fix for loadCommitInfo.
  - Fix tests to work with local-libbery.