@@ -1,5 +1,7 @@
 This file documents the revision history for Perl extension Gitalist.
 
+  - Fixed ownership assertions in t/02git_object.t (Christian Walde).
+
 0.003002 2011-05-23
   - Add JSON serialization and expose via .json (Tomas Doran).
   - Provide .psgi for Plack goodness (Francoise Dehinbo).
